--- a/style.css
+++ b/style.css
@@ -811,6 +811,37 @@ footer .copyright {
   background-image: url(img/about/banner.png);
 }
 
+#about-head img{
+  width: 50%;
+  height: auto;
+}
+
+#about-head{
+  display: flex;
+  align-items: center;
+}
+
+#about-head div{
+  padding-left: 40px;
+}
+
+#about-app{
+  text-align: center;
+
+}
+
+#about-app .video{
+  width: 70%;
+  height: 100%;
+  margin: 30px auto 0 auto;
+}
+
+#about-app .video video{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
 @media (max-width: 477px){
   #header {
     padding: 10 30px;
@@ -914,6 +945,25 @@ footer .copyright {
   #blog .blog-details{
     width: 100%;
   }
+
+  /* about page */
+  #about-head{
+    flex-direction: column;
+  }
+
+  #about-head img{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  #about-head div{
+    padding-left: 0px;
+  }
+
+  #about-app .video{
+    width: 100%;
+  }
+
 }
 
 
