--- a/style.css
+++ b/style.css
@@ -1005,7 +1005,7 @@ footer .copyright {
 #cart table thead{
   border: 1px solid #e1e1e1;
   border-left: none;
-  boeder-right: none;
+  border-right: none;
 }
 
 #cart table thead td{
@@ -1235,12 +1235,9 @@ footer .copyright {
 
   #coupon{
     width: 100%;
-
   }
-
   #subtotal{
     width: 100%;
     padding: 20px;
   }
-  
 }
